# pcl

./: .gitignore  LICENSE  README.md
auto_registration/: CMakeLists.txt
auto_registration/src/: ICPReg.h  mainwindow.h
data/: blade_data.ply  blade_data_4mm.ply  blade_model.ply  blade_model_01.ply  monkey.ply  suixingdianban_model.ply
manual_registration/: CMakeLists.txt
manual_registration/src/: manual_registration.cpp  manual_registration.h  manual_registration.ui
pcl-interactive_icp/: CMakeLists.txt
pcl-interactive_icp/src/: interactive_icp.cpp
pcl-matrix_transform/: CMakeLists.txt
pcl-matrix_transform/src/: matrix_transform.cpp
pcl-mps/: CMakeLists.txt
pcl-mps/src/: mps.cpp
pcl-qt_widgets/: CMakeLists.txt
pcl-qt_widgets/galib/: ga.lib  ga_D.lib
pcl-qt_widgets/galib/ga/: gaconfig.h
pcl-qt_widgets/src/: EGIReg.cpp  EGIReg.h  ICPReg.cpp  ICPReg.h  Sac_IA.cpp  Sac_IA.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optimalReg.cpp  optimalReg.h  record.cpp  record.h  res.h  visualization.cpp  visualization.h
pcl-qtviewer/: CMakeLists.txt
pcl-qtviewer/src/: main.cpp  pclviewer.cpp  pclviewer.h
pcl-qvtkwidget/: CMakeLists.txt
pcl-qvtkwidget/src/: ProjectMainWindow.cpp  ProjectMainWindow.h  ProjectMainWindow.ui  main.cpp
pcl-sacia/: CMakeLists.txt
pcl-sacia/src/: PlaneModelSegmentation.cpp  common.hpp  features.h  main.cpp  result.pcd  sac_ia.cpp  sac_ia.h  visualization.cpp  visualization.h
pcl-sacia/src/pcd/: a1.pcd  a2.pcd  a3.pcd  a4.pcd  a5.pcd  blade_model.ply  suixingdianban_filtered.ply
